Added plausible.io analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>heimåt</title>
 
+    <script async defer data-domain="heim.ax" src="https://plausible.io/js/plausible.js"></script>
+
     <style>
       @font-face {
         font-family: 'Perfect DOS VGA 437';
